--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="author" content="Karthik Nishanth" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="http://nishanthkarthik.github.io/css/main.min.19a1afc29775a0a00348bb9ace6b9f23c96285629fb47e0d8f8c0f175426a7a2.css" />
+    <link rel="stylesheet" href="https://nishanthkarthik.github.io/css/main.min.19a1afc29775a0a00348bb9ace6b9f23c96285629fb47e0d8f8c0f175426a7a2.css" />
 
     
     <meta name="twitter:card" content="summary"/>
@@ -17,14 +17,14 @@
     <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content=" " />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://nishanthkarthik.github.io/404.html" />
+<meta property="og:url" content="https://nishanthkarthik.github.io/404.html" />
 
 
 
   </head>
   <body>
     <header class="app-header">
-      <a href="http://nishanthkarthik.github.io/">
+      <a href="https://nishanthkarthik.github.io/">
         <h2>nishanthkarthik&#39;s blog</h2>
       </a>
       <div class="app-header-social">
